# foundational

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml  test.yml
basal/: binary.py  download.py  files.py  functions.py  getter.py  hashing.py  nesting.py  properties.py  zip_archive.py
basic/: binary.py  download.py  files.py  functions.py  getter.py  hashing.py  nesting.py  properties.py  zip_archive.py
basics/: attrdict.py  binary.py  casing.py  client.py  collections.py  dates.py  download.py  encoding.py  enum.py  exceptions.py  files.py  functions.py  getter.py  guids.py  hashing.py  inheritance.py  ips.py  iterables.py  memory.py  mixins.py  nesting.py  nulls.py  properties.py  sets.py  sizes.py  submodules.py  time_periods.py  timezone.py  tracebacks.py  zip_archive.py
crucial/: binary.py  download.py  files.py  functions.py  getter.py  hashing.py  nesting.py  properties.py  zip_archive.py
foundational/: enum.py  hashing.py  http.py  nesting.py
scripts/: lint.sh
tests/: test_attrdict.py  test_binary.py  test_encoding.py
