[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basal"
dynamic = ["version"]
description = "A little library for commonly used Python functions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "Al Barrentine" },
]
keywords = [
    "basal",
    "utils",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "chardet",
    "fsspec>=2022.3.0",
    "ftfy",
    "furl",
    "inflect",
    "pendulum",
    "python-dateutil",
    "pytz>=2022.1",
    "requests",
    "url-normalize",
    "user-agents",
]

[project.urls]
Homepage = "https://github.com/goodcleanfun/basal"
Repository = "https://github.com/goodcleanfun/basal"

[tool.coverage.run]
parallel = true
source = [
    "tests",
    "basal"
]
context = '${CONTEXT}'


[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.hatch.version]
path = "basal/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/basal",
]

